Fix Windows Chrome vertical scrollbar in viewer

--- a/public/css/viewer.scss
+++ b/public/css/viewer.scss
@@ -647,6 +647,31 @@ ul.screens-list {
 }
 
 ///////////////////////////////////////////////////////////////////////////////////////
+// Remove vertical scrollbar on Windows Chrome //
+///////////////////////////////////////////////////////////////////////////////////////
+
+.app-body-wrapper, .list-wrapper {
+	width: 100%;
+	height: calc( 100vh - 114px);
+}
+
+main {
+ position: relative;
+ overflow: hidden;
+}
+
+.list-wrapper {
+ position: absolute;
+ left: 0;
+ overflow-x: hidden;
+ overflow-y: scroll;
+}
+
+.list-wrapper::-webkit-scrollbar {
+ display: none;
+}
+
+///////////////////////////////////////////////////////////////////////////////////////
 // Keyframe animations //
 ///////////////////////////////////////////////////////////////////////////////////////
 
